# catkin_workspace_kinova

./: .rosinstall.bak  README.md  quaternion_euler_converter.py  test.py
glove_control/: CMakeLists.txt  package.xml
glove_control/launch/: glove_controller.launch
glove_control/src/: glove_controller.cpp  glove_controller_class.cpp  glove_controller_process.cpp
kinova_gen3_lite_control/: CMakeLists.txt  package.xml
kinova_gen3_lite_control/config/: README.md
kinova_gen3_lite_control/launch/: arm_controller_moveit.launch  pick_place_controller.launch
kinova_gen3_lite_control/msg/: targetPosition.msg
kinova_gen3_lite_control/scripts/: arm_controller_moveit.py
kinova_gen3_lite_control/src/: arm_controller.cpp  pick_place_controller.cpp
kinova_gen3_lite_control/srv/: ActionTrigger.srv  AddRemoveCollisionObject.srv  DetachAndRemoveObject.srv  GetPose.srv  GripperValue.srv  ManagePose.srv  ManageSavedPlans.srv  MoveArmToPose.srv  Pick.srv  Place.srv  PlanAndSaveTrajectory.srv  PrintCollisionObjects.srv  RefreshObject.srv  StepAdjust.srv  TargetPose.srv
ros_kortex/kortex_move_it_config/gen3_lite_gen3_lite_2f_move_it_config/config/: default_joint_limits.yaml  gen3_lite_gen3_lite_2f.srdf.xacro
usb_data_ros/: CMakeLists.txt  package.xml
usb_data_ros/src/: usb_data_node.py
